Added blackout and dashcam service pages

--- a/services/auto-painting/index.html
+++ b/services/auto-painting/index.html
@@ -17,7 +17,8 @@
 	<link rel='dns-prefetch' href='//maps.google.com' />
 	<link rel='dns-prefetch' href='//fonts.googleapis.com' />
 	<link rel='dns-prefetch' href='//s.w.org' />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+	 crossorigin="anonymous">
 	<script type="text/javascript">
 		window._wpemojiSettings = {
 			"baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/11\/72x72\/",
@@ -225,11 +226,16 @@
 											 href="/services/auto-detailing/">Auto Detailing</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+										<li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+											 href="/services/blackout-package/">Blackout Package</a></li>
+										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+											 href="/services/camera-installation/">Dash Cam Installation</a></li>
 									</ul>
 								</li>
 								<li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
 								<li id="menu-item-1585" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1585"><a href="/about/">About</a></li>
 								<li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/faq/">FAQ</a></li>
+								<li id="menu-item-1581" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/locations/">Locations</a></li>
 								<li id="menu-item-1590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/contact/">Contact</a></li>
 								<li id="menu-item-1591" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a id="header-appoint"
 									 href="/appointment/">Appointment</a></li>
@@ -264,11 +270,16 @@
 												Detailing</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/headlight-restoration/">Headlight
 												Restoration</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a href="/services/blackout-package/">Blackout
+												Package</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
+												Cam Installation</a></li>
 									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1585"><a href="/about/">About</a></li>
 								<li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/faq/">FAQ</a></li>
+								<li id="menu-item-1581" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/locations/">Locations</a></li>
 								<li id="menu-item-1590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/contact/">Contact</a></li>
 								<li id="menu-item-1591" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a id="header-appoint"
 									 href="/appointment/">Appointment</a></li>
@@ -331,6 +342,10 @@
 												 href="/services/auto-detailing/">Auto Detailing</a></li>
 											<li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-991"><a
 												 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+											<li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
+												 href="/services/blackout-package/">Blackout Package</a></li>
+											<li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
+												 href="/services/camera-installation/">Dash Cam Installation</a></li>
 										</ul>
 									</div>
 								</div>
@@ -491,7 +506,7 @@
 							<p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
 						</div>
 
-						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>FOREST LAKE, CA</h7></button>
+						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE FOREST, CA</h7></button>
 						<div class="panel">
 							<p>25252 Jeronimo Rd</br> Lake Forest, CA 92630</p>
 						</div>
