--- a/services/headlight-restoration/index.html
+++ b/services/headlight-restoration/index.html
@@ -17,7 +17,8 @@
 	<link rel='dns-prefetch' href='//maps.google.com' />
 	<link rel='dns-prefetch' href='//fonts.googleapis.com' />
 	<link rel='dns-prefetch' href='//s.w.org' />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+	 crossorigin="anonymous">
 	<script type="text/javascript">
 		window._wpemojiSettings = {
 			"baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/11\/72x72\/",
@@ -46,8 +47,8 @@
 						return !(b = d([55356, 56826, 55356, 56819], [55356, 56826, 8203, 55356, 56819])) && (b = d([55356, 57332, 56128,
 							56423, 56128, 56418, 56128, 56421, 56128, 56430, 56128, 56423, 56128, 56447
 						], [55356, 57332, 8203, 56128, 56423, 8203, 56128, 56418, 8203, 56128, 56421, 8203, 56128, 56430, 8203, 56128,
-							56423, 8203, 56128, 56447
-						]), !b);
+								56423, 8203, 56128, 56447
+							]), !b);
 					case "emoji":
 						return b = d([55358, 56760, 9792, 65039], [55358, 56760, 8203, 9792, 65039]), !b
 				}
@@ -61,9 +62,9 @@
 			var g, h, i, j, k = b.createElement("canvas"),
 				l = k.getContext && k.getContext("2d");
 			for (j = Array("flag", "emoji"), c.supports = {
-					everything: !0,
-					everythingExceptFlag: !0
-				}, i = 0; i < j.length; i++) c.supports[j[i]] = e(j[i]), c.supports.everything = c.supports.everything && c.supports[
+				everything: !0,
+				everythingExceptFlag: !0
+			}, i = 0; i < j.length; i++) c.supports[j[i]] = e(j[i]), c.supports.everything = c.supports.everything && c.supports[
 				j[i]], "flag" !== j[i] && (c.supports.everythingExceptFlag = c.supports.everythingExceptFlag && c.supports[j[i]]);
 			c.supports.everythingExceptFlag = c.supports.everythingExceptFlag && !c.supports.flag, c.DOMReady = !1, c.readyCallback =
 				function () {
@@ -72,8 +73,8 @@
 					c.readyCallback()
 				}, b.addEventListener ? (b.addEventListener("DOMContentLoaded", h, !1), a.addEventListener("load", h, !1)) : (a.attachEvent(
 					"onload", h), b.attachEvent("onreadystatechange", function () {
-					"complete" === b.readyState && c.readyCallback()
-				})), g = c.source || {}, g.concatemoji ? f(g.concatemoji) : g.wpemoji && g.twemoji && (f(g.twemoji), f(g.wpemoji)))
+						"complete" === b.readyState && c.readyCallback()
+					})), g = c.source || {}, g.concatemoji ? f(g.concatemoji) : g.wpemoji && g.twemoji && (f(g.twemoji), f(g.wpemoji)))
 		}(window, document, window._wpemojiSettings);
 	</script>
 	<style type="text/css">
@@ -145,17 +146,17 @@
 					s = 0,
 					h = 0;
 				if (e.responsiveLevels && (jQuery.each(e.responsiveLevels, function (e, f) {
-						f > i && (t = r = f, l = e), i > f && f > r && (r = f, n = e)
-					}), t > r && (l = n)), f = e.gridheight[l] || e.gridheight[0] || e.gridheight, s = e.gridwidth[l] || e.gridwidth[0] ||
-					e.gridwidth, h = i / s, h = h > 1 ? 1 : h, f = Math.round(h * f), "fullscreen" == e.sliderLayout) {
+					f > i && (t = r = f, l = e), i > f && f > r && (r = f, n = e)
+				}), t > r && (l = n)), f = e.gridheight[l] || e.gridheight[0] || e.gridheight, s = e.gridwidth[l] || e.gridwidth[0] ||
+				e.gridwidth, h = i / s, h = h > 1 ? 1 : h, f = Math.round(h * f), "fullscreen" == e.sliderLayout) {
 					var u = (e.c.width(), jQuery(window).height());
 					if (void 0 != e.fullScreenOffsetContainer) {
 						var c = e.fullScreenOffsetContainer.split(",");
 						if (c) jQuery.each(c, function (e, i) {
-								u = jQuery(i).length > 0 ? u - jQuery(i).outerHeight(!0) : u
-							}), e.fullScreenOffset.split("%").length > 1 && void 0 != e.fullScreenOffset && e.fullScreenOffset.length > 0 ?
-							u -= jQuery(window).height() * parseInt(e.fullScreenOffset, 0) / 100 : void 0 != e.fullScreenOffset && e.fullScreenOffset
-							.length > 0 && (u -= parseInt(e.fullScreenOffset, 0))
+							u = jQuery(i).length > 0 ? u - jQuery(i).outerHeight(!0) : u
+						}), e.fullScreenOffset.split("%").length > 1 && void 0 != e.fullScreenOffset && e.fullScreenOffset.length > 0 ?
+								u -= jQuery(window).height() * parseInt(e.fullScreenOffset, 0) / 100 : void 0 != e.fullScreenOffset && e.fullScreenOffset
+									.length > 0 && (u -= parseInt(e.fullScreenOffset, 0))
 					}
 					f = u
 				} else void 0 != e.minHeight && f < e.minHeight && (f = e.minHeight);
@@ -211,7 +212,7 @@
 											 href="/services/bumper-repair/">Bumper Repair</a></li>
 										<li id="menu-item-1609" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1609"><a
 											 href="/services/auto-dent-repair/">Auto Dent Repair</a></li>
-										<li id="menu-item-1608" class="menu-item menu-item-type-post_type menu-item-object-ql_services current-menu-item menu-item-1608"><a
+										<li id="menu-item-1608" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1608"><a
 											 href="/services/auto-painting/">Auto Painting</a></li>
 										<li id="menu-item-1607" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1607"><a
 											 href="/services/paintless-dent-repair/">Paintless Dent Repair</a></li>
@@ -223,13 +224,18 @@
 											 href="/services/windshield-repair/">Windshield Repair/Replace</a></li>
 										<li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
 											 href="/services/auto-detailing/">Auto Detailing</a></li>
-										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-1670"><a
 											 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+										<li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+											 href="/services/blackout-package/">Blackout Package</a></li>
+										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+											 href="/services/camera-installation/">Dash Cam Installation</a></li>
 									</ul>
 								</li>
 								<li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
 								<li id="menu-item-1585" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1585"><a href="/about/">About</a></li>
 								<li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/faq/">FAQ</a></li>
+								<li id="menu-item-1581" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/locations/">Locations</a></li>
 								<li id="menu-item-1590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/contact/">Contact</a></li>
 								<li id="menu-item-1591" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a id="header-appoint"
 									 href="/appointment/">Appointment</a></li>
@@ -250,8 +256,8 @@
 												Repair</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1609"><a href="/services/auto-dent-repair/">Auto
 												Dent Repair</a></li>
-										<li class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1608"><a
-											 href="/services/auto-painting/">Auto Painting</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1608"><a href="/services/auto-painting/">Auto
+												Painting</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1607"><a href="/services/paintless-dent-repair/">Paintless
 												Dent Repair</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1606"><a href="/services/paint-scratch-repair/">Paint
@@ -264,11 +270,16 @@
 												Detailing</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-1670"><a href="/services/headlight-restoration/">Headlight
 												Restoration</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a href="/services/blackout-package/">Blackout
+												Package</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
+												Cam Installation</a></li>
 									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1585"><a href="/about/">About</a></li>
 								<li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/faq/">FAQ</a></li>
+								<li id="menu-item-1581" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/locations/">Locations</a></li>
 								<li id="menu-item-1590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/contact/">Contact</a></li>
 								<li id="menu-item-1591" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a id="header-appoint"
 									 href="/appointment/">Appointment</a></li>
@@ -331,6 +342,10 @@
 												 href="/services/auto-detailing/">Auto Detailing</a></li>
 											<li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services current-menu-item menu-item-991"><a
 												 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+											<li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
+												 href="/services/blackout-package/">Blackout Package</a></li>
+											<li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
+												 href="/services/camera-installation/">Dash Cam Installation</a></li>
 										</ul>
 									</div>
 								</div>
@@ -475,7 +490,7 @@
 							<p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
 						</div>
 
-						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>FOREST LAKE, CA</h7></button>
+						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE FOREST, CA</h7></button>
 						<div class="panel">
 							<p>25252 Jeronimo Rd</br> Lake Forest, CA 92630</p>
 						</div>
