--- a/services/index.html
+++ b/services/index.html
@@ -229,6 +229,10 @@
                                                 href="/services/auto-detailing/">Auto Detailing</a></li>
                                         <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+                                        <li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+                                                href="/services/blackout-package/">Blackout Package</a></li>
+                                        <li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                                href="/services/camera-installation/">Dashcam Installation</a></li>
                                     </ul>
                                 </li>
                                 <li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a
@@ -237,6 +241,8 @@
                                         href="/about/">About</a></li>
                                 <li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a
                                         href="/faq/">FAQ</a></li>
+                                <li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a
+                                        href="/locations/">Locations</a></li>
                                 <li id="menu-item-1590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a
                                         href="/contact/">Contact</a></li>
                                 <li id="menu-item-1591" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a
@@ -268,12 +274,15 @@
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1667"><a
                                                 href="/services/rim-repair/">Rim Repair</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1668"><a
-                                                href="/services/windshield-repair>Windshield Repair/Replace</a></li>
-                                        <li class="
-                                                menu-item menu-item-type-post_type menu-item-object-page
-                                                menu-item-1669"><a href="/services/auto-detailing/">Auto Detailing</a></li>
+                                                href="/services/windshield-repair">Windshield Repair/Replace</a></li>
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+                                                href="/services/auto-detailing/">Auto Detailing</a></li>
                                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
                                                 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+                                                href="/services/blackout-package/">Blackout Package</a></li>
+                                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+                                                href="/services/camera-installation/">Dashcam Installation</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a
@@ -282,6 +291,8 @@
                                         href="/about/">About</a></li>
                                 <li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a
                                         href="/faq/">FAQ</a></li>
+                                <li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a
+                                        href="/locations/">Locations</a></li>
                                 <li id="menu-item-1590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a
                                         href="/contact/">Contact</a></li>
                                 <li id="menu-item-1591" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a
@@ -324,23 +335,20 @@
                             <ul class="services-list clearfix">
                                 <div class="vc_row wpb_row vc_row-fluid">
                                     <li><a href="/services/auto-body-repair/" title="AUTO BODY REPAIR"><img width="390"
-                                                height="260" src="/assets/pics/car_body_work.jpg"
-                                                class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="AUTO BODY REPAIR"
-                                                title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                                height="260" src="/assets/pics/car_body_work.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="AUTO BODY REPAIR" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/auto-body-repair/" title="AUTO BODY REPAIR">AUTO
                                                 BODY REPAIR</a></h4>
                                     </li>
                                     <li><a href="/services/bumper-repair/" title="BUMPER REPAIR"><img width="390"
-                                                height="260" src="/assets/pics/car_bumper_repair_2.png"
-                                                class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="BUMPER REPAIR"
-                                                title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                                height="260" src="/assets/pics/car_bumper_repair_2.png" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="BUMPER REPAIR" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/bumper-repair/" title="BUMPER REPAIR">BUMPER
                                                 REPAIR</a></h4>
                                     </li>
                                     <li><a href="/services/auto-dent-repair/" title="AUTO DENT REPAIR"><img width="390"
-                                                height="260" src="/assets/pics/car_dent_small_2.jpg"
-                                                class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="AUTO DENT REPAIR"
-                                                title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                                height="260" src="/assets/pics/car_dent_small_2.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="AUTO DENT REPAIR" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/auto-dent-repair/" title="AUTO DENT REPAIR">AUTO
                                                 DENT REPAIR</a></h4>
                                     </li>
@@ -353,15 +361,15 @@
                                                 REPAIR</a></h4>
                                     </li>
                                     <li><a href="/services/windshield-repair/" title="WINDSHIELD REPAIR/REPLACE"><img
-                                                width="390" height="260" src="/assets/pics/windshield_repair.jpg"
-                                                class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="WINDSHIELD REPAIR/REPLACE"
-                                                title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                                width="390" height="260" src="/assets/pics/windshield_repair.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="WINDSHIELD REPAIR/REPLACE" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/windshield-repair/" title="WINDSHIELD REPAIR/REPLACE">WINDSHIELD
                                                 REPAIR / REPLACE</a></h4>
                                     </li>
                                     <li><a href="/services/paint-scratch-repair/" title="PAINT SCRATCH REPAIR"><img
                                                 width="390" height="260" src="/assets/pics/car_scratch_2.jpg""
-                                                class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="PAINT SCRATCH REPAIR"
+                                                class="
+                                                attachment-medium-thumb size-medium-thumb wp-post-image" alt="PAINT SCRATCH REPAIR"
                                                 title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/paint-scratch-repair/" title="PAINT SCRATCH REPAIR">PAINT
                                                 SCRATCH REPAIR</a></h4>
@@ -369,16 +377,14 @@
                                 </div>
                                 <div class="vc_row wpb_row vc_row-fluid">
                                     <li><a href="/services/auto-painting/" title="AUTO PAINTING"><img width="390"
-                                                height="260" src="/assets/pics/car_painting_3.jpg"
-                                                class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="AUTO PAINTING"
-                                                title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                                height="260" src="/assets/pics/car_painting_3.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="AUTO PAINTING" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/auto-painting/" title="AUTO PAINTING">AUTO
                                                 PAINTING</a></h4>
                                     </li>
                                     <li><a href="/services/auto-detailing/" title="AUTO DETAILING"><img width="390"
-                                                height="260" src="/assets/pics/auto_detailing.jpg"
-                                                class="attachment-medium-thumb size-medium-thumb wp-post-image" alt="AUTO DETAILING"
-                                                title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
+                                                height="260" src="/assets/pics/auto_detailing.jpg" class="attachment-medium-thumb size-medium-thumb wp-post-image"
+                                                alt="AUTO DETAILING" title="" sizes="(max-width: 390px) 100vw, 390px" /></a>
                                         <h4 class="box-header"><a href="/services/auto-detailing/" title="AUTO DETAILING">AUTO
                                                 DETAILING</a></h4>
                                     </li>
@@ -436,27 +442,24 @@
                             <li><a target='_blank' href="#" class="social-yelp"></a></li>
                         </ul>
                     </div>
-                    <div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
+                        <div class='vc_col-sm-3 wpb_column vc_column_container widget cs_contact_details_widget'>
                         <h6 class='box-header'>LOCATIONS</h6>
                         <button class="accordionz margin-top-20"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SAN
                                 DIEGO, CA</h7></button>
                         <div class="panel">
                             <p>6696 Miramar Road L</br> San Diego, CA 92121</p>
                         </div>
-
                         <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SAN MARCOS,
                                 CA</h7></button>
                         <div class="panel">
                             <p>738 W San Marcos Blvd</br> San Marcos, CA 92078</p>
                         </div>
-
                         <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>SANTEE, CA</h7></button>
                         <div class="panel">
                             <p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
                         </div>
-
-                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>FOREST
-                                LAKE, CA</h7></button>
+                        <button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE
+                                FOREST, CA</h7></button>
                         <div class="panel">
                             <p>25252 Jeronimo Rd</br> Lake Forest, CA 92630</p>
                         </div>
