--- a/services/windshield-repair/index.html
+++ b/services/windshield-repair/index.html
@@ -212,7 +212,7 @@
 											 href="/services/bumper-repair/">Bumper Repair</a></li>
 										<li id="menu-item-1609" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1609"><a
 											 href="/services/auto-dent-repair/">Auto Dent Repair</a></li>
-										<li id="menu-item-1608" class="menu-item menu-item-type-post_type menu-item-object-ql_services current-menu-item menu-item-1608"><a
+										<li id="menu-item-1608" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1608"><a
 											 href="/services/auto-painting/">Auto Painting</a></li>
 										<li id="menu-item-1607" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-1607"><a
 											 href="/services/paintless-dent-repair/">Paintless Dent Repair</a></li>
@@ -220,17 +220,22 @@
 											 href="/services/paint-scratch-repair/">Paint Scratch Repair</a></li>
 										<li id="menu-item-1667" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1667"><a
 											 href="/services/rim-repair/">Rim Repair</a></li>
-										<li id="menu-item-1668" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1668"><a
+										<li id="menu-item-1668" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-1668"><a
 											 href="/services/windshield-repair/">Windshield Repair/Replace</a></li>
 										<li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
 											 href="/services/auto-detailing/">Auto Detailing</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+										<li id="menu-item-1669" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a
+											 href="/services/blackout-package/">Blackout Package</a></li>
+										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
+											 href="/services/camera-installation/">Dash Cam Installation</a></li>
 									</ul>
 								</li>
 								<li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
 								<li id="menu-item-1585" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1585"><a href="/about/">About</a></li>
 								<li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/faq/">FAQ</a></li>
+								<li id="menu-item-1581" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/locations/">Locations</a></li>
 								<li id="menu-item-1590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/contact/">Contact</a></li>
 								<li id="menu-item-1591" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a id="header-appoint"
 									 href="/appointment/">Appointment</a></li>
@@ -265,11 +270,16 @@
 												Detailing</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/headlight-restoration/">Headlight
 												Restoration</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a href="/services/blackout-package/">Blackout
+												Package</a></li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
+												Cam Installation</a></li>
 									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="/gallery/">Gallery</a></li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1585"><a href="/about/">About</a></li>
 								<li id="menu-item-1589" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/faq/">FAQ</a></li>
+								<li id="menu-item-1581" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/locations/">Locations</a></li>
 								<li id="menu-item-1590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a href="/contact/">Contact</a></li>
 								<li id="menu-item-1591" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1590"><a id="header-appoint"
 									 href="/appointment/">Appointment</a></li>
@@ -332,6 +342,10 @@
 												 href="/services/auto-detailing/">Auto Detailing</a></li>
 											<li id="menu-item-991" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-991"><a
 												 href="/services/headlight-restoration/">Headlight Restoration</a></li>
+											<li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
+												 href="/services/blackout-package/">Blackout Package</a></li>
+											<li id="menu-item-992" class="menu-item menu-item-type-post_type menu-item-object-ql_services menu-item-990"><a
+												 href="/services/camera-installation/">Dash Cam Installation</a></li>
 										</ul>
 									</div>
 								</div>
@@ -484,7 +498,7 @@
 							<p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
 						</div>
 
-						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>FOREST LAKE, CA</h7></button>
+						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE FOREST, CA</h7></button>
 						<div class="panel">
 							<p>25252 Jeronimo Rd</br> Lake Forest, CA 92630</p>
 						</div>
