--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<link rel='dns-prefetch' href='//maps.google.com' />
 	<link rel='dns-prefetch' href='//fonts.googleapis.com' />
 	<link rel='dns-prefetch' href='//s.w.org' />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+	 crossorigin="anonymous">
 	<script type="text/javascript">
 		window._wpemojiSettings = {
 			"baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/11\/72x72\/",
@@ -45,8 +46,8 @@
 						return !(b = d([55356, 56826, 55356, 56819], [55356, 56826, 8203, 55356, 56819])) && (b = d([55356, 57332, 56128,
 							56423, 56128, 56418, 56128, 56421, 56128, 56430, 56128, 56423, 56128, 56447
 						], [55356, 57332, 8203, 56128, 56423, 8203, 56128, 56418, 8203, 56128, 56421, 8203, 56128, 56430, 8203, 56128,
-							56423, 8203, 56128, 56447
-						]), !b);
+								56423, 8203, 56128, 56447
+							]), !b);
 					case "emoji":
 						return b = d([55358, 56760, 9792, 65039], [55358, 56760, 8203, 9792, 65039]), !b
 				}
@@ -60,9 +61,9 @@
 			var g, h, i, j, k = b.createElement("canvas"),
 				l = k.getContext && k.getContext("2d");
 			for (j = Array("flag", "emoji"), c.supports = {
-					everything: !0,
-					everythingExceptFlag: !0
-				}, i = 0; i < j.length; i++) c.supports[j[i]] = e(j[i]), c.supports.everything = c.supports.everything && c.supports[
+				everything: !0,
+				everythingExceptFlag: !0
+			}, i = 0; i < j.length; i++) c.supports[j[i]] = e(j[i]), c.supports.everything = c.supports.everything && c.supports[
 				j[i]], "flag" !== j[i] && (c.supports.everythingExceptFlag = c.supports.everythingExceptFlag && c.supports[j[i]]);
 			c.supports.everythingExceptFlag = c.supports.everythingExceptFlag && !c.supports.flag, c.DOMReady = !1, c.readyCallback =
 				function () {
@@ -71,8 +72,8 @@
 					c.readyCallback()
 				}, b.addEventListener ? (b.addEventListener("DOMContentLoaded", h, !1), a.addEventListener("load", h, !1)) : (a.attachEvent(
 					"onload", h), b.attachEvent("onreadystatechange", function () {
-					"complete" === b.readyState && c.readyCallback()
-				})), g = c.source || {}, g.concatemoji ? f(g.concatemoji) : g.wpemoji && g.twemoji && (f(g.twemoji), f(g.wpemoji)))
+						"complete" === b.readyState && c.readyCallback()
+					})), g = c.source || {}, g.concatemoji ? f(g.concatemoji) : g.wpemoji && g.twemoji && (f(g.twemoji), f(g.wpemoji)))
 		}(window, document, window._wpemojiSettings);
 	</script>
 	<style type="text/css">
@@ -142,17 +143,17 @@
 					s = 0,
 					h = 0;
 				if (e.responsiveLevels && (jQuery.each(e.responsiveLevels, function (e, f) {
-						f > i && (t = r = f, l = e), i > f && f > r && (r = f, n = e)
-					}), t > r && (l = n)), f = e.gridheight[l] || e.gridheight[0] || e.gridheight, s = e.gridwidth[l] || e.gridwidth[0] ||
-					e.gridwidth, h = i / s, h = h > 1 ? 1 : h, f = Math.round(h * f), "fullscreen" == e.sliderLayout) {
+					f > i && (t = r = f, l = e), i > f && f > r && (r = f, n = e)
+				}), t > r && (l = n)), f = e.gridheight[l] || e.gridheight[0] || e.gridheight, s = e.gridwidth[l] || e.gridwidth[0] ||
+				e.gridwidth, h = i / s, h = h > 1 ? 1 : h, f = Math.round(h * f), "fullscreen" == e.sliderLayout) {
 					var u = (e.c.width(), jQuery(window).height());
 					if (void 0 != e.fullScreenOffsetContainer) {
 						var c = e.fullScreenOffsetContainer.split(",");
 						if (c) jQuery.each(c, function (e, i) {
-								u = jQuery(i).length > 0 ? u - jQuery(i).outerHeight(!0) : u
-							}), e.fullScreenOffset.split("%").length > 1 && void 0 != e.fullScreenOffset && e.fullScreenOffset.length > 0 ?
-							u -= jQuery(window).height() * parseInt(e.fullScreenOffset, 0) / 100 : void 0 != e.fullScreenOffset && e.fullScreenOffset
-							.length > 0 && (u -= parseInt(e.fullScreenOffset, 0))
+							u = jQuery(i).length > 0 ? u - jQuery(i).outerHeight(!0) : u
+						}), e.fullScreenOffset.split("%").length > 1 && void 0 != e.fullScreenOffset && e.fullScreenOffset.length > 0 ?
+								u -= jQuery(window).height() * parseInt(e.fullScreenOffset, 0) / 100 : void 0 != e.fullScreenOffset && e.fullScreenOffset
+									.length > 0 && (u -= parseInt(e.fullScreenOffset, 0))
 					}
 					f = u
 				} else void 0 != e.minHeight && f < e.minHeight && (f = e.minHeight);
@@ -247,9 +248,9 @@
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
 											 href="/services/headlight-restoration/">Headlight Restoration</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
-											href="/services/blackout-package/">Blackout Package</a></li>
+											 href="/services/blackout-package/">Blackout Package</a></li>
 										<li id="menu-item-1670" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a
-											href="/services/camera-installation/">Dash Cam Installation</a></li>
+											 href="/services/camera-installation/">Dash Cam Installation</a></li>
 									</ul>
 								</li>
 								<li id="menu-item-1583" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1583"><a href="gallery/">Gallery</a></li>
@@ -293,7 +294,8 @@
 												Restoration</a></li>
 										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1669"><a href="/services/blackout-package/">Blackout
 												Package</a></li>
-										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash Cam
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1670"><a href="/services/camera-installation/">Dash
+												Cam
 												Installation</a></li>
 									</ul>
 								</li>
@@ -329,9 +331,8 @@
 											 data-saveperformance="off" data-title="Slide_1" data-param1="" data-param2="" data-param3="" data-param4=""
 											 data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 												<!-- MAIN IMAGE -->
-												<img src="/assets/pics/slider_1.jpg" alt="" title="image_01.jpg" width="1920" height="600"
-												 data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg"
-												 data-no-retina>
+												<img src="/assets/pics/slider_1.jpg" alt="" title="image_01.jpg" width="1920" height="600" data-bgposition="center top"
+												 data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 												<!-- LAYERS -->
 
 												<!-- LAYER NR. 1 -->
@@ -374,13 +375,12 @@
 											<!-- SLIDE  -->
 											<li data-index="rs-2" data-transition="fade" data-slotamount="1" data-hideafterloop="0"
 											 data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default"
-											 data-thumb="//assets/pics/slider_2.jpg" data-delay="6000" data-rotate="0"
-											 data-saveperformance="off" data-title="Slide_2" data-param1="" data-param2="" data-param3="" data-param4=""
-											 data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+											 data-thumb="//assets/pics/slider_2.jpg" data-delay="6000" data-rotate="0" data-saveperformance="off"
+											 data-title="Slide_2" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6=""
+											 data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 												<!-- MAIN IMAGE -->
-												<img src="/assets/pics/slider_2.jpg" alt="" title="image_02.jpg" width="1920" height="600"
-												 data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg"
-												 data-no-retina>
+												<img src="/assets/pics/slider_2.jpg" alt="" title="image_02.jpg" width="1920" height="600" data-bgposition="center top"
+												 data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 												<!-- LAYERS -->
 
 												<!-- LAYER NR. 5 -->
@@ -408,7 +408,8 @@
 												 data-frames='[{"delay":1100,"speed":1200,"frame":"0","from":"y:40px;opacity:0;","to":"o:1;","ease":"easeInOutExpo"},{"delay":"wait","speed":500,"frame":"999","to":"x:0px;y:0px;opacity:0;","ease":"easeInOutExpo"}]'
 												 data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
 												 data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-size: 60px; line-height: 60px; font-weight: 900; color: rgba(0,0,0,1); letter-spacing: ;font-family:Arial;">
-													<p class="description">We are in the process of converting Prestige Motors in Lake Forest into our 4th AcciDent Pro location!</p>
+													<p class="description">We are in the process of converting Prestige Motors in Lake Forest into our 4th
+														AcciDent Pro location!</p>
 												</div>
 
 												<!-- LAYER NR. 8 -->
@@ -423,13 +424,12 @@
 											<!-- SLIDE  -->
 											<li data-index="rs-3" data-transition="fade" data-slotamount="1" data-hideafterloop="0"
 											 data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default"
-											 data-thumb="/assets/pics/slider_3.jpg" data-delay="6000" data-rotate="0"
-											 data-saveperformance="off" data-title="Slide_3" data-param1="" data-param2="" data-param3="" data-param4=""
-											 data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
+											 data-thumb="/assets/pics/slider_3.jpg" data-delay="6000" data-rotate="0" data-saveperformance="off"
+											 data-title="Slide_3" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6=""
+											 data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 												<!-- MAIN IMAGE -->
-												<img src="/assets/pics/slider_3.jpg" alt="" title="image_03.jpg" width="1920" height="600"
-												 data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg"
-												 data-no-retina>
+												<img src="/assets/pics/slider_3.jpg" alt="" title="image_03.jpg" width="1920" height="600" data-bgposition="center top"
+												 data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 												<!-- LAYERS -->
 
 												<!-- LAYER NR. 9 -->
@@ -1124,7 +1124,7 @@
 						<div class="panel">
 							<p>10147 Mission Gorge Rd</br> Santee, CA 92071</p>
 						</div>
-						
+
 						<button class="accordionz"><i class="fas fa-arrow-circle-right"></i>&nbsp;&nbsp;<h7>LAKE FOREST, CA</h7></button>
 						<div class="panel">
 							<p>25252 Jeronimo Rd</br> Lake Forest, CA 92630</p>
